fix: prevent testimonial modal from being pressed when not visible

--- a/src/app/components/Testimonial/Testimonial.scss
+++ b/src/app/components/Testimonial/Testimonial.scss
@@ -70,6 +70,7 @@
   }
 
   .testimonials-modal-button {
+    display: none;
     border: 1px solid $primary-black;
     text-transform: uppercase;
     font-family: $p-font;
